src/test/deca/syntax/invalid/custom/untermined_string.deca
// Resultats :
// Erreur contextuelle
// Ligne 2 : chaîne non terminée

String s = "Hello world;
